# tp2-ros2-packages

./: .gitignore  README.md
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: ekf.yaml  gazebo_bridge.yaml
my_robot_bringup/launch/: bringup.launch.xml  test.launch.xml
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro  my_robot_gazebo.xacro
my_robot_navigation/: package.xml  setup.py
my_robot_navigation/my_robot_navigation/: grid_mapper_node.py  obstacle_avoidance.py  occupancy_grid.py  wall_following_node.py
